# demo_geomapfish

./: .UPGRADE_INSTRUCTIONS  .config  .dockerignore  .editorconfig  .env.mako  .env.sample  .eslintrc  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .python-version  .secretsignore  .travis.yml  .upgrade.yaml  BACKPORT_TODO  CONST_CHANGELOG.txt  CONST_Makefile  CONST_TIPS.txt.in  CONST_buildout.cfg  CONST_config-schema.yaml  CONST_dev-requirements.txt  CONST_packages.yaml  CONST_requirements.txt  CONST_vars.yaml  CONST_versions.txt  CONST_versions_requirements.txt  Docker-Mapserver  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.rst  SECURITY.md  UPGRADE.rst  alembic.ini.in  alembic.ini.mako  alembic_static.ini  alembic_static.ini.mako  (+101 more)
.circleci/: config.yml
.github/: ci-upgrade.yaml  dependabot.yaml  ghci.yaml  renovate.json5
.tx/: config_mako
CONST_create_template/: .config  .dockerignore  .env.mako  .env.sample  .gitignore  .travis.yml  Dockerfile  Makefile  README.rst  alembic.ini  alembic.ini.mako  alembic_static.ini.mako  build  demo.mk  development.ini.mako  docker-compose-lib.yaml  docker-compose.override.sample.yaml  docker-compose.yaml  env.default  env.project  env.sample  nondocker-finalise.mk  package.json  production.ini.mako  project.yaml  project.yaml.mako  setup.cfg  setup.py  travis.mk  vars.yaml  vars_demo.yaml  webpack.apps.js.mako
apache/: application.wsgi.mako  frontend.conf.in  frontend.conf.mako  mapcache.xml  mapserver.conf.mako  tiles.conf  tiles.conf.mako  tinyows.conf.mako  wsgi.conf.in  wsgi.conf.mako
c2cgeoportal/: __init__.py  forms.py  models.py  subscribers.py
ci/: cleanup  config.yaml  docker-compose-check  requirements.txt  trigger
commons/: .dockerignore
custom/: .bandit.yaml  .coveragerc  .prospector.yaml  Dockerfile  MANIFEST.in  Pipfile  README.txt  development.ini  gunicorn.conf.py  production.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  testing.ini
custom/custom/: __init__.py  routes.py
custom/custom/alembic/: env.py  script.py.mako
custom/custom/models/: __init__.py  feedback.py  meta.py  mymodel.py
custom/custom/scripts/: initialize_db.py
custom/custom/static/: theme.css
custom/custom/templates/: layout.mako
custom/custom/util/: send_mail.py
custom/custom/views/: __init__.py  cog.py  default.py  feedback.py  notfound.py
custom/custom/views/swisscom_heatmap/: entry.py  query_swisscom_heatmap_api.py  tile_id_to_coordinates.py
custom/tests/: conftest.py  test_functional.py  test_views.py
demo/: __init__.py  forms.py  models.py  subscribers.py
deploy/: deploy.cfg.in  deploy.cfg.mako
front/: haproxy.cfg  haproxy.cfg.tmpl  main.conf
front_dev/: haproxy.cfg.tmpl
geoportal/: .dockerignore  .eslintignore  .eslintrc  .eslintrc.yaml  CONST_Makefile  CONST_vars.yaml  DANGEROUS_config.yaml  Dockerfile  Dockerfile.mako  Makefile  alembic.ini  alembic.yaml  development.ini  development.ini.mako  eval_templates.sh  gunicorn.conf.py  list4vrt  oereb_client.yml  production.ini  production.ini.mako  requirements.txt  setup.py  tsconfig.json  vars.yaml  webpack.api.js  webpack.apps.js  webpack.apps.js.mako
global-front/: Dockfile  docker-compose.yaml  main.conf
haproxy/: haproxy.cfg.tmpl
jsbuild/: app.cfg  app.cfg.mako  mobile.cfg
mapserver/: Aster2056.dbf  Aster2056.shp  Aster2056.shx  CONST_example_map  CONST_example_map_mako  Dockerfile  SRTM2056.dbf  SRTM2056.shp  SRTM2056.shx  administration.map.in  c2cgeoportal.map.in  edit.map  (+35 more)
(+513 files in other folders)
