[tool.poetry]
name = 'demo-geomapfish-custom'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gunicorn = "22.0.0"
plaster-pastedeploy = "0.7"
pyramid = "2.0.2"
pyramid-mako = "1.1.0"
pyramid-debugtoolbar = "4.9"
waitress = "2.1.2"
alembic = "1.7.7"
pyramid-retry = "2.1.1"
pyramid-tm = "2.5"
sqlalchemy = "1.4.53"
transaction = "3.0.1"
"zope.sqlalchemy" = "1.6"
cornice = "6.0.1"
requests = "2.32.3"
psycopg2 = "2.9.9"
c2cwsgiutils = "5.0.2"
cee-syslog-handler = "0.6.0"
PyJWT = "2.4.0"
redis = "4.3.6"
PyYAML = "6.0.2"
sentry-sdk = "2.8.0"
requests-oauthlib = "1.3.1"
ujson = "5.4.0"
certifi = "2024.7.4"
idna = "3.7"
mako = "1.2.4"
oauthlib = "3.2.2"
pygments = "2.15.1"
urllib3 = { version = "1.26.20", optional = true }
zipp = { version = "3.19.3", optional = true }
webob = { version = "1.8.8", optional = true }


[tool.poetry.dev-dependencies]
prospector = {version = "1.7.7", extras = ["with_bandit", "with_mypy"]}
