[tool.poetry]
name = 'demo-geomapfish-custom'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gunicorn = "23.0.0"
plaster-pastedeploy = "1.0.1"
pyramid = "2.0.2"
pyramid-mako = "1.1.0"
pyramid-debugtoolbar = "4.12.1"
waitress = "3.0.0"
alembic = "1.13.2"
pyramid-retry = "2.1.1"
pyramid-tm = "2.5"
sqlalchemy = "2.0.32"
transaction = "4.0"
"zope.sqlalchemy" = "3.1"
cornice = "6.1.0"
requests = "2.32.3"
psycopg2 = "2.9.9"
c2cwsgiutils = { version = "6.0.8", extras = ["webserver"] }
cee-syslog-handler = "0.6.0"
PyJWT = "2.8.0"
redis = "5.0.8"
PyYAML = "6.0.2"
sentry-sdk = "2.8.0"
requests-oauthlib = "2.0.0"
ujson = "5.10.0"
azure-storage-blob = "12.20.0"
azure-identity = "1.16.1"
urllib3 = { version = "2.2.2", optional = true }
certifi = { version = "2024.7.4", optional = true }
webob = { version = "1.8.8", optional = true }

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.10.3", extras = ["with_bandit", "with_mypy"] }
